# MecaVent

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  hola.txt  makefile
backend/: Dockerfile  alembic.ini  alembic_client.ini  alembic_master.ini  main.py  manage.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 00ba35bf1cdb_init.py  397a21632691_new_var_admin.py  5c0791d62b8f_changes_in_user.py  729af4ea32b1_username_now_is_unique_and_email_too.py  7701845d7633_new_column_redis.py  88fd069cf351_change_names_app_columns.py  a0eefe894d7b_new_app_tables.py  cc60e2983cea_new_value_admin.py  e1f9f5504d9d_change_name_user_master.py
backend/alembic/versions/client/: 9143e45b97d4_first_migration.py  a06033fa7cdf_init.py  c14a99dadef5_roles.py
backend/alembic/versions/master/: 1f94d7050998_first.py  94b6061dae61_initial.py
backend/src/db/: __init__.py  db.py  redis.py
backend/src/models/: db_declarations.py
backend/src/models/clients/: user.py
backend/src/models/master/: __init__.py  apps.py  users.py
backend/src/routes/: __init__.py  types.py
backend/src/routes/admin/apps/: clients.py
backend/src/routes/admin/auth/: auth.py
backend/src/routes/app/: router.py
backend/src/routes/auth/: auth.py  forms.py
backend/src/utils/: jwt_depends.py  types_utils.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/src/: app.d.ts  hooks.server.ts
frontend/src/lib/utils/: get_host.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
(+11 files in other folders)
