[project]
name = "backend-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.1",
    "asyncpg>=0.28.0",
    "sqlmodel>=0.0.37",
    "uvicorn[standard]>=0.41.0",
    "psycopg[binary]>=3.3.3",
    "psycopg2-binary>=2.9.11",
    "redis>=7.3.0",
    "pyjwt>=2.11.0",
    "python-multipart>=0.0.22",
]
